// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mount function Basic function 1`] = `
<body>
  <div>
    
                
    <p>
      Hola a todos
    </p>
    
            
  </div>
</body>
`;

exports[`Mount function Computed function 1`] = `
<body>
  <div>
    
                
    <p>
      Hola a todos 
      <span
        class="computed"
      >
        24
      </span>
    </p>
    
            
  </div>
  <div>
    
                
    <p>
      Hola a todos 
    </p>
    
            
  </div>
</body>
`;

exports[`Mount function Computed w/ Events and State function 1`] = `
<body>
  <div>
    
                
    <p>
      Hola a todos 
      <span
        class="computed"
      >
        24
      </span>
    </p>
    
            
  </div>
  <div>
    
                
    <p>
      Hola a todos 
      <span
        class="computed"
      >
        undefined
      </span>
    </p>
    
            
  </div>
  <div
    onclick="functionScoped"
  >
    
                
    <p>
      Hola a todos 
      <span
        class="computed"
      >
        undefined
      </span>
    </p>
    
            
  </div>
  <div>
    
                
    <p>
      Hola a todos 
    </p>
    
            
  </div>
</body>
`;

exports[`Mount function Computed w/ State function 1`] = `
<body>
  <div>
    
                
    <p>
      Hola a todos 
      <span
        class="computed"
      >
        24
      </span>
    </p>
    
            
  </div>
  <div>
    
                
    <p>
      Hola a todos 
      <span
        class="computed"
      >
        undefined
      </span>
    </p>
    
            
  </div>
  <div>
    
                
    <p>
      Hola a todos 
    </p>
    
            
  </div>
</body>
`;
